add path to go-mod-pin-commit task config
Signed-off-by: Max Eshleman <meshleman@pivotal.io>

--- a/tasks/go-mod-pin-commit/task.yml
+++ b/tasks/go-mod-pin-commit/task.yml
@@ -12,5 +12,8 @@ inputs:
 outputs:
 - name: bumped-base-repo
 
+run:
+  path: loggregator-ci/tasks/go-mod-pin-commit/task
+
 params:
   PACKAGE_URL:
