fix inputs in go-packages
Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/go-packages.yml
+++ b/pipelines/go-packages.yml
@@ -252,6 +252,9 @@ jobs:
     resource: loggregator-release-develop
   - task: bump-noaa-in-loggregator
     file: loggregator-ci/tasks/go-mod-pin-commit/task.yml
+    input_mapping:
+      base_repo: loggregator
+      package_repo: noaa
     params:
       PACKAGE_URL: github.com/cloudfoundry/noaa
   - put: loggregator-release-develop
