put sonde-go in gopath
Signed-off-by: Caitlyn Yu <cyu@pivotal.io>

--- a/pipelines/go-packages.yml
+++ b/pipelines/go-packages.yml
@@ -255,6 +255,8 @@ jobs:
     input_mapping:
       base-repo: loggregator
       package-repo: noaa
+    output_mapping:
+      bumped-base_repo: bumped-loggregator
     params:
       PACKAGE_URL: github.com/cloudfoundry/noaa
   - put: loggregator-release-develop
