--- a/tasks/sonde-go-generate/task.yml
+++ b/tasks/sonde-go-generate/task.yml
@@ -7,6 +7,7 @@ image_resource:
 
 inputs:
 - name: sonde-go
+  path: src/github.com/cloudfoundry/sonde-go
 - name: dropsonde-protocol
 - name: loggregator-ci
 
