--- a/pipelines/go-packages.yml
+++ b/pipelines/go-packages.yml
@@ -256,7 +256,7 @@ jobs:
       base-repo: loggregator
       package-repo: noaa
     output_mapping:
-      bumped-base_repo: bumped-loggregator
+      bumped-base-repo: bumped-loggregator
     params:
       PACKAGE_URL: github.com/cloudfoundry/noaa
   - put: loggregator-release-develop
