--- a/pipelines/datadog-firehose-nozzle.yml
+++ b/pipelines/datadog-firehose-nozzle.yml
@@ -19,6 +19,12 @@ resources:
     branch: master
     private_key: {{deployments-loggregator-key}}
 
+- name: cf-deployment-concourse-tasks
+  type: git
+  source:
+    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
+    tag_filter: v*
+
 - name: 24h
   type: time
   source:
@@ -35,6 +41,7 @@ jobs:
     - get: loggregator-ci
     - get: 24h
       trigger: true
+    - get: cf-deployment-concourse-tasks
   - task: upload-release
     file: loggregator-ci/tasks/upload-release/task.yml
     params:
@@ -48,8 +55,11 @@ jobs:
       BBL_STATE_DIR: ((acceptance_bbl_state_dir))
       SYSTEM_DOMAIN: ((acceptance_system_domain))
       DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-  - task: deploy
-    file: loggregator-ci/tasks/bosh-deploy/task.yml
+  - task: deploy-standalone
+    file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
+    input_mapping:
+      vars-store: bbl-state
+      cf-deployment: datadog-firehose-nozzle-release
     params:
       BBL_STATE_DIR: ((acceptance_bbl_state_dir))
       DEPLOYMENT_NAME: datadog
@@ -57,6 +67,4 @@ jobs:
       OPS_FILES: datadog.yml
       VARS_FILES: datadog.yml
       VARS_STORE_FILE: null
-    input_mapping:
-      bosh-release: datadog-firehose-nozzle-release
-      vars-store: bbl-state
+      SYSTEM_DOMAIN: ((acceptance_system_domain))
