--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -159,7 +159,7 @@ resources:
 - name: concourse-tasks
   type: git
   source:
-    branch: export-release-task
+    branch: master
     uri: https://github.com/pivotal-cf/concourse-tasks
 
 - name: cf-drain-cli
