add loggregator-ci as input to test-metrics-agent

--- a/tasks/test-metrics-agent/task.yml
+++ b/tasks/test-metrics-agent/task.yml
@@ -6,6 +6,7 @@ image_resource:
     repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
 
 inputs:
+- name: loggregator-ci
 - name: bbl-state
 
 params:
