--- a/tasks/create-final-release/task.yml
+++ b/tasks/create-final-release/task.yml
@@ -23,17 +23,21 @@ run:
   path: loggregator-ci/tasks/create-final-release/task
 
 params:
-  # - Required
+  # - Optional
   # - The S3 access key for release blobstore
   S3_ACCESS_KEY:
 
-  # - Required
+  # - Optional
   # - The S3 secret key for release blobstore
   S3_SECRET_KEY:
 
-  # - Required
+  # - Optional
   # - The bucket name of the S3 release blobstore
   BLOBSTORE_BUCKET:
+
+  # - Optional
+  # - The json key of the gcs blobstore
+  JSON_KEY:
 
   # - Required
   # - The ssh key used to talk to github to pull latest branch version
