compare version in repo to expected version when cutting releases
Signed-off-by: Tom Chen <tochen@pivotal.io>

--- a/tasks/create-final-release/task.yml
+++ b/tasks/create-final-release/task.yml
@@ -19,6 +19,9 @@ outputs:
   # - The modified repos that need to be pushed back to github
 - name: repos
 
+  # - The version that is expected to be cut to compare with the version in the repo
+- name: version
+
 run:
   path: loggregator-ci/tasks/create-final-release/task
 
