--- a/tasks/create-final-release/backport/task.yml
+++ b/tasks/create-final-release/backport/task.yml
@@ -6,14 +6,11 @@ platform: linux
 inputs:
   # - Required
   # - The repo from which the final release will be created
-- name: master-repo
+- name: release-repo
 
   # - Required
   # - The task repository
 - name: loggregator-ci
-
-  # - The version that is expected to be cut to compare with the version in the repo
-- name: version
 
 outputs:
   # - The artifacts used to create the github release
@@ -23,24 +20,20 @@ outputs:
 - name: repos
 
 run:
-  path: loggregator-ci/tasks/create-final-release/task
+  path: loggregator-ci/tasks/create-final-release/backport/task
 
 params:
-  # - Optional
+  # - Required
   # - The S3 access key for release blobstore
   S3_ACCESS_KEY:
 
-  # - Optional
+  # - Required
   # - The S3 secret key for release blobstore
   S3_SECRET_KEY:
 
-  # - Optional
+  # - Required
   # - The bucket name of the S3 release blobstore
   BLOBSTORE_BUCKET:
-
-  # - Optional
-  # - The json key of the gcs blobstore
-  JSON_KEY:
 
   # - Required
   # - The ssh key used to talk to github to pull latest branch version
@@ -52,4 +45,4 @@ params:
 
   # - Required
   # - Branch from which the final release will be created
-  MASTER_BRANCH:
+  BACKPORT_BRANCH:
