--- a/tasks/create-final-release/should-publish/task.yml
+++ b/tasks/create-final-release/should-publish/task.yml
@@ -12,7 +12,7 @@ inputs:
 - name: publish
 
   # Whether or not the release should be published
-- name: github-release-input
+- name: input-github-release
 
 outputs:
 - name: github-release
