Add nats-tls job to pipeline

--- a/tasks/prepare-cf-ops/task.yml
+++ b/tasks/prepare-cf-ops/task.yml
@@ -15,6 +15,7 @@ inputs:
 - name: loggregator-ci
 - name: log-cache-release
 - name: metrics-discovery-release
+- name: nats-release
 - name: system-metrics-release
 - name: system-metrics-scraper-release
 
