--- a/tasks/system-health/task.yml
+++ b/tasks/system-health/task.yml
@@ -3,7 +3,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  souce:
+  source:
     repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
     tag: latest
 
